--- a/brand.html
+++ b/brand.html
@@ -253,7 +253,7 @@
     <h3>당신의 창업 성공 스토리,<br>투썸플레이스가 함께합니다.</h3>
     <p>향기로운 커피와 달콤한 디저트가 함께하는 프리미엄 디저트 카페 투썸플레이스. 투썸플레이스의 축적된 경험과 노하우를 바탕으로 여러분의 성공창업을 약속 드립니다.</p>
     <div class="button">
-      <button class="left__btn">창업안내 바로가기</button>
+      <button class="left__btn">창업안내</button>
       <button class="right__btn">가맹상담 신청</button>
     </div>
     <div class="img">
