--- a/brand.html
+++ b/brand.html
@@ -230,13 +230,13 @@
   <h2>BEST MENU</h2>
   <h3>전문가의 섬세함으로 완성된 최상의 커피와 디저트 </h3>
   <swiper-container class="mySwiper2" pagination="true" pagination-clickable="true" slides-per-view="3"
-      centered-slides="true" space-between="10" grab-cursor="true" slideOffsetAfter="0">
-      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_coffee1.jpg" alt="best_menu1">스페니쉬 연유 라떼</a></swiper-slide>
-      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_deli1.jpg" alt="best_menu2">호밀 B. E. L. T</a></swiper-slide>
-      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_dessert1.jpg" alt="best_menu3">스트로베리 초콜릿 생크림</a></swiper-slide>
-      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_coffee2.jpg" alt="best_menu4">롱블랙</a></swiper-slide>
-      <swiper-slide><a href="javascript:void(0)"><img src="./images/menu_deli2.jpg" alt="best_menu5">페스토 햄치즈 파니니</a></swiper-slide>
-      <swiper-slide><a href="javascript:voide(0);"><img src="./images/menu_dessert2.jpg" alt="best_menu6">마스카포네 티라미수</a></swiper-slide>
+      space-between="10" grab-cursor="true" slideOffsetAfter="0">
+      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_coffee1.jpg" alt="best_menu1"><p>스페니쉬 연유 라떼</p></a></swiper-slide>
+      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_deli1.jpg" alt="best_menu2"><p>호밀 B. E. L. T</p></a></swiper-slide>
+      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_dessert1.jpg" alt="best_menu3"><p>스트로베리 초콜릿 생크림</p></a></swiper-slide>
+      <swiper-slide><a href="javascript:void(0);"><img src="./images/menu_coffee2.jpg" alt="best_menu4"><p>롱블랙</p></a></swiper-slide>
+      <swiper-slide><a href="javascript:void(0)"><img src="./images/menu_deli2.jpg" alt="best_menu5"><p>페스토 햄치즈 파니니</p></a></swiper-slide>
+      <swiper-slide><a href="javascript:voide(0);"><img src="./images/menu_dessert2.jpg" alt="best_menu6"><p>마스카포네 티라미수</p></a></swiper-slide>
   </swiper-container>   
 </div>
 <div class="alist scroll-spy" data-aos="fade-up" >
@@ -249,12 +249,14 @@
 </div>
 <div class="franchise scroll-spy" data-aos="fade-up" >
   <div class="text">
+    <div class="text_in">
     <h2>FRANCHISE</h2>
     <h3>당신의 창업 성공 스토리,<br>투썸플레이스가 함께합니다.</h3>
     <p>향기로운 커피와 달콤한 디저트가 함께하는 프리미엄 디저트 카페 투썸플레이스. 투썸플레이스의 축적된 경험과 노하우를 바탕으로 여러분의 성공창업을 약속 드립니다.</p>
     <div class="button">
       <button class="left__btn">창업안내</button>
       <button class="right__btn">가맹상담 신청</button>
+    </div>
     </div>
     <div class="img">
       <img src="./images/img_store_01@3x.png" alt="store1">
