--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
 <body>
   <div class="wrap">
     <div class="left">
+      <a href="./brand.html">
       <div class="text">
         <h2>TWOSOMEPLACE</h2> 
         <h3>투썸플레이스 메뉴</h3>
         <p>신메뉴부터 인기메뉴, 추천메뉴까지 투썸플레이스의 모든 메뉴와 최신 이벤트 소식을 살펴보세요.</p>
         <a href="./brand.html"><button>홈페이지</button></a>
       </div>
+    </a>
   </div>
     <div class="right">
+      <a href="./startUp.html">
       <div class="text">
         <h2>TWOSOMEPLACE</h2>
         <h3>투썸플레이스 창업</h3>
         <p>창업 비용부터 실제 창업주분들의 생생한 후기까지, 성공 창업의 길 투썸플레이스와 함께하세요. 든든한 창업 파트너가 되겠습니다.</p>
         <a href="./startUp.html"><button>창업문의</button></a> 
         </div>
+      </a>
     </div>
   </div>
 </body>
